Dfr-1074: Amend application refactor