@@ -3,10 +3,10 @@ package uk.gov.hmcts.reform.finrem.caseorchestration.handler;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.finrem.caseorchestration.ccd.callback.CallbackType;
+import uk.gov.hmcts.reform.finrem.caseorchestration.controllers.GenericAboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.finrem.caseorchestration.helper.GeneralApplicationHelper;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.CaseType;
 import uk.gov.hmcts.reform.finrem.caseorchestration.model.EventType;
@@ -15,6 +15,7 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.GeneralApplication
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.GeneralApplicationStatus.REFERRED;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_APPLICATION_COLLECTION;
@@ -25,7 +26,8 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigCo
 @Slf4j
 @Service
 @RequiredArgsConstructor
-public class GeneralApplicationReferToJudgeAboutToSubmitHandler implements CallbackHandler {
+public class GeneralApplicationReferToJudgeAboutToSubmitHandler
+    implements CallbackHandler<Map<String, Object>> {
 
     private final GeneralApplicationHelper helper;
 
@@ -37,8 +39,9 @@ public class GeneralApplicationReferToJudgeAboutToSubmitHandler implements Callb
     }
 
     @Override
-    public AboutToStartOrSubmitCallbackResponse handle(CallbackRequest callbackRequest,
-                                                       String userAuthorisation) {
+    public GenericAboutToStartOrSubmitCallbackResponse<Map<String, Object>> handle(
+        CallbackRequest callbackRequest,
+        String userAuthorisation) {
         CaseDetails caseDetails = callbackRequest.getCaseDetails();
         log.info("Received on start request to {} for Case ID: {}", EventType.GENERAL_APPLICATION_REFER_TO_JUDGE, caseDetails.getId());
         Map<String, Object> caseData = caseDetails.getData();
@@ -51,24 +54,24 @@ public class GeneralApplicationReferToJudgeAboutToSubmitHandler implements Callb
 
         } else {
             if (dynamicList == null) {
-                return AboutToStartOrSubmitCallbackResponse.builder().data(caseData)
+                return GenericAboutToStartOrSubmitCallbackResponse.<Map<String, Object>>builder().data(caseData)
                     .errors(List.of("There is no general application available to refer.")).build();
             }
             setGeneralApplicationList(caseData, existingList, dynamicList);
         }
-        return AboutToStartOrSubmitCallbackResponse.builder().data(caseData).build();
+        return GenericAboutToStartOrSubmitCallbackResponse.<Map<String, Object>>builder().data(caseData).build();
     }
 
     private void setGeneralApplicationList(Map<String, Object> caseData,
                                            List<GeneralApplicationCollectionData> existingList,
                                            DynamicList dynamicList) {
         final String valueCode = dynamicList.getValueCode();
-        String label  = dynamicList.getValue().getLabel();
+        String label = dynamicList.getValue().getLabel();
         String referredApplicationDetails = label.substring(label.indexOf("-") + 1);
         caseData.put(GENERAL_APPLICATION_REFERRED_DETAIL, referredApplicationDetails);
 
         final List<GeneralApplicationCollectionData> applicationCollectionDataList
-            = existingList.stream().map(ga -> setStatus(ga, valueCode)).sorted(helper::getCompareTo).toList();
+            = existingList.stream().map(ga -> setStatus(ga, valueCode)).sorted(helper::getCompareTo).collect(Collectors.toList());
 
         caseData.put(GENERAL_APPLICATION_COLLECTION, applicationCollectionDataList);
     }
@@ -79,7 +82,7 @@ public class GeneralApplicationReferToJudgeAboutToSubmitHandler implements Callb
         if (data != null) {
             data.getGeneralApplicationItems().setGeneralApplicationStatus(REFERRED.getId());
             existingGeneralApplication.add(data);
-            caseData.put(GENERAL_APPLICATION_COLLECTION,existingGeneralApplication);
+            caseData.put(GENERAL_APPLICATION_COLLECTION, existingGeneralApplication);
         }
         helper.deleteNonCollectionGeneralApplication(caseData);
     }
